tests/bad/func_ret_from_void.ae
/// fail: Cannot return 'i32' in void function

def foo() {
    return 5
}
